<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/unit0"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="@dimen/unit1"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/unit1"
    card_view:cardElevation="@dimen/unit2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/car_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/carimage"
                        android:scaleType="centerCrop" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="UselessParent">

                            <FrameLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp">

                                <ImageView
                                    android:id="@+id/posterFav"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:background="?attr/selectableItemBackground"
                                    android:clickable="true"
                                    android:contentDescription="@string/favbutton"
                                    android:focusable="true"
                                    android:padding="12dp"
                                    android:shadowColor="@android:color/black"
                                    android:shadowDx="2"
                                    android:shadowDy="2"
                                    android:shadowRadius="2"
                                    android:src="@drawable/un_favorite" />

                                <ImageView
                                    android:id="@+id/posterUnFav"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:background="?attr/selectableItemBackground"
                                    android:clickable="true"
                                    android:contentDescription="@string/unfavbutton"
                                    android:focusable="true"
                                    android:padding="12dp"
                                    android:shadowColor="@android:color/black"
                                    android:shadowDx="2"
                                    android:shadowDy="2"
                                    android:shadowRadius="2"
                                    android:src="@drawable/favorite"
                                    android:visibility="gone" />

                            </FrameLayout>
                        </RelativeLayout>

                    </FrameLayout>

                </RelativeLayout>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/car_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/jeeb"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/car_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:text="@string/_121_000_aed"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/car_name" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="false"
                    android:divider="@drawable/divider"
                    android:orientation="horizontal"
                    android:showDividers="middle"
                    android:weightSum="3.5"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/car_price">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">


                        <TextView
                            android:id="@+id/lot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lot"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/lot_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/lot_count"
                            card_view:layout_constraintEnd_toEndOf="@+id/lot"
                            card_view:layout_constraintStart_toStartOf="@+id/lot"
                            card_view:layout_constraintTop_toBottomOf="@+id/lot" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/bids"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/bids"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/bids_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:text="@string/bids_count" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/time_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/timeleft"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/time_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:text="@string/_12_24_36"
                            android:textSize="16sp" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>